--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Example with using blob store in an app",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Finn Pauls",
