--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "busboy": "^0.2.8",
-    "fs-blob-store": "^3.0.1"
+    "fs-blob-store": "^3.0.2",
+    "postgres-blob-store": "^1.1.2"
   }
 }
